--- a/dump.html
+++ b/dump.html
@@ -1,2 +1,20 @@
-<pre><b>TreeDump from main at I_Love_Math.cpp:12
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Tree Dump</title>
+</head>
+<body>
+<style>
+    * {
+       font-size: 20px;
+    }
+</style>
+<pre> Creation time (hours:min): 23:40
+ data (day:month:year): 22:11:2025 </pre><pre><b>TreeDump from main at I_Love_Math.cpp:14
     <img src="TreeMemStruct/svg_dot/1dump.svg">
+<pre><b>TreeDump from main at I_Love_Math.cpp:27
+    <img src="TreeMemStruct/svg_dot/2dump.svg">
+<pre><b>TreeDump from main at I_Love_Math.cpp:32
+    <img src="TreeMemStruct/svg_dot/3dump.svg">
+</body>
+</html>
